# long file list initially generated with "find . -type f -follow -print"
# with "" prefix and CMakeLists deleted

add_library(MixtComp
    LinAlg/mixt_Math.cpp
    LinAlg/mixt_Typedef.cpp
    LinAlg/mixt_ConstIterator.h
    LinAlg/mixt_Math.h
    LinAlg/mixt_Typedef.h
    LinAlg/mixt_EigenMatrixBaseAddons.h
    LinAlg/mixt_LinAlg.h
    LinAlg/mixt_Iterator.h
    LinAlg/names.cpp
    LinAlg/names.h
    Composer/mixt_ClassDataStat.h
    Composer/mixt_ClassDataStat.cpp
    Composer/mixt_ClassSampler.cpp
    Composer/mixt_ZClassInd.cpp
    Composer/mixt_ClassSampler.h
    Composer/mixt_MixtureComposer.cpp
    Composer/mixt_ZClassInd.h
    Composer/mixt_MixtureComposer.h
    IO/mixt_IO.h
    IO/mixt_MisValParser.h
    IO/NamedAlgebra.h
    IO/mixt_SpecialStr.h
    IO/mixt_SpecialStr.cpp
    IO/IOFunctions.h
    IO/IOFunctions.cpp
    Param/mixt_ConfIntParamStat.h
    Various/mixt_Timer.cpp
    Various/mixt_Enum.h
    Various/mixt_Timer.h
    Various/mixt_Various.cpp
    Various/mixt_Constants.h
    Various/mixt_Constants.cpp
    Various/mixt_Various.h
    Manager/createAllMixtures.h
    mixt_MixtComp.h
    Mixture/mixt_IMixture.h
    Mixture/Simple/Weibull/WeibullLikelihood.h
    Mixture/Simple/Weibull/Weibull.h
    Mixture/Simple/Weibull/WeibullStatistic.h
    Mixture/Simple/Weibull/WeibullLikelihood.cpp
    Mixture/Simple/Weibull/WeibullStatistic.cpp
    Mixture/Simple/Weibull/WeibullSampler.cpp
    Mixture/Simple/Weibull/Weibull.cpp
    Mixture/Simple/Weibull/WeibullSampler.h
    Mixture/Simple/Gaussian/GaussianSampler.h
    Mixture/Simple/Gaussian/Gaussian.cpp
    Mixture/Simple/Gaussian/GaussianLikelihood.h
    Mixture/Simple/Gaussian/GaussianLikelihood.cpp
    Mixture/Simple/Gaussian/Gaussian.h
    Mixture/Simple/Gaussian/GaussianSampler.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomialStatistic.h
    Mixture/Simple/NegativeBinomial/NegativeBinomialSampler.h
    Mixture/Simple/NegativeBinomial/NegativeBinomialLikelihood.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomialLikelihood.h
    Mixture/Simple/NegativeBinomial/NegativeBinomialStatistic.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomial.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomialSampler.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomial.h
    Mixture/Simple/Categorical/Categorical.h
    Mixture/Simple/Categorical/CategoricalSampler.h
    Mixture/Simple/Categorical/Categorical.cpp
    Mixture/Simple/Categorical/CategoricalLikelihood.h
    Mixture/Simple/Categorical/CategoricalSampler.cpp
    Mixture/Simple/Categorical/CategoricalDataStat.h
    Mixture/Simple/Categorical/CategoricalDataStat.cpp
    Mixture/Simple/Poisson/Poisson.h
    Mixture/Simple/Poisson/PoissonStatistic.h
    Mixture/Simple/Poisson/PoissonLikelihood.h
    Mixture/Simple/Poisson/PoissonLikelihood.cpp
    Mixture/Simple/Poisson/PoissonStatistic.cpp
    Mixture/Simple/Poisson/Poisson.cpp
    Mixture/Simple/Poisson/PoissonSampler.h
    Mixture/Simple/Poisson/PoissonSampler.cpp
    Mixture/Simple/SimpleMixture.h
    Mixture/Rank/mixt_RankClass.h
    Mixture/Rank/mixt_RankLikelihood.cpp
    Mixture/Rank/mixt_RankMixture.h
    Mixture/Rank/mixt_RankStat.h
    Mixture/Rank/mixt_RankStat.cpp
    Mixture/Rank/mixt_RankIndividual.h
    Mixture/Rank/mixt_RankVal.h
    Mixture/Rank/mixt_RankClass.cpp
    Mixture/Rank/mixt_RankParser.cpp
    Mixture/Rank/mixt_RankParser.h
    Mixture/Rank/mixt_RankIndividual.cpp
    Mixture/Rank/mixt_RankLikelihood.h
    Mixture/Rank/mixt_RankVal.cpp
    Mixture/Functional/mixt_FunctionalClass.h
    Mixture/Functional/mixt_FunctionalSharedAlphaMixture.h
    Mixture/Functional/mixt_FunctionalClass.cpp
    Mixture/Functional/mixt_Function.cpp
    Mixture/Functional/mixt_FunctionalComputation.cpp
    Mixture/Functional/mixt_FunctionalComputation.h
    Mixture/Functional/mixt_FunctionalParser.h
    Mixture/Functional/mixt_FunctionalParser.cpp
    Mixture/Functional/mixt_FunctionalMixture.h
    Mixture/Functional/mixt_Function.h
    Statistic/mixt_ExponentialStatistic.h
    Statistic/MultinomialStatistic.cpp
    Statistic/mixt_RNG.h
    Statistic/mixt_RNG.cpp
    Statistic/MultinomialStatistic.h
    Statistic/NormalStatistic.cpp
    Statistic/mixt_UniformStatistic.cpp
    Statistic/NormalStatistic.h
    Statistic/mixt_ExponentialStatistic.cpp
    Statistic/mixt_UniformStatistic.h
    Statistic/Functions.h
    Statistic/mixt_Statistic.h
    Statistic/UniformIntStatistic.cpp
    Statistic/UniformIntStatistic.h
    Run/Predict.h
    Run/Learn.h
    Data/mixt_AugmentedData.h
    Data/mixt_ConfIntDataStat.h
    Data/mixt_AugmentedData.cpp
    Strategy/mixt_SEMStrategy.h
    Strategy/mixt_GibbsStrategy.h
)
