# long file list initially generated with "find . -type f -follow -print"
# with "" prefix and CMakeLists deleted

add_library(MixtComp
    LinAlg/Maths.cpp
    LinAlg/Typedef.cpp
    LinAlg/ConstIterator.h
    LinAlg/Maths.h
    LinAlg/Typedef.h
    LinAlg/EigenMatrixBaseAddons.h
    LinAlg/LinAlg.h
    LinAlg/Iterator.h
    LinAlg/names.cpp
    LinAlg/names.h
    Composer/ClassDataStat.h
    Composer/ClassDataStat.cpp
    Composer/ClassSampler.cpp
    Composer/ZClassInd.cpp
    Composer/ClassSampler.h
    Composer/MixtureComposer.cpp
    Composer/ZClassInd.h
    Composer/MixtureComposer.h
    IO/IO.h
    IO/MisValParser.h
    IO/NamedAlgebra.h
    IO/SpecialStr.h
    IO/SpecialStr.cpp
    IO/IOFunctions.h
    IO/IOFunctions.cpp
    Param/ConfIntParamStat.h
    Various/Timer.cpp
    Various/Enum.h
    Various/Timer.h
    Various/Various.cpp
    Various/Constants.h
    Various/Constants.cpp
    Various/Various.h
    Manager/createAllMixtures.h
    MixtComp.h
    Mixture/IMixture.h
    Mixture/Simple/Weibull/WeibullLikelihood.h
    Mixture/Simple/Weibull/Weibull.h
    Mixture/Simple/Weibull/WeibullStatistic.h
    Mixture/Simple/Weibull/WeibullLikelihood.cpp
    Mixture/Simple/Weibull/WeibullStatistic.cpp
    Mixture/Simple/Weibull/WeibullSampler.cpp
    Mixture/Simple/Weibull/Weibull.cpp
    Mixture/Simple/Weibull/WeibullSampler.h
    Mixture/Simple/Gaussian/GaussianSampler.h
    Mixture/Simple/Gaussian/Gaussian.cpp
    Mixture/Simple/Gaussian/GaussianLikelihood.h
    Mixture/Simple/Gaussian/GaussianLikelihood.cpp
    Mixture/Simple/Gaussian/Gaussian.h
    Mixture/Simple/Gaussian/GaussianSampler.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomialStatistic.h
    Mixture/Simple/NegativeBinomial/NegativeBinomialSampler.h
    Mixture/Simple/NegativeBinomial/NegativeBinomialLikelihood.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomialLikelihood.h
    Mixture/Simple/NegativeBinomial/NegativeBinomialStatistic.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomial.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomialSampler.cpp
    Mixture/Simple/NegativeBinomial/NegativeBinomial.h
    Mixture/Simple/Multinomial/Multinomial.h
    Mixture/Simple/Multinomial/MultinomialSampler.h
    Mixture/Simple/Multinomial/Multinomial.cpp
    Mixture/Simple/Multinomial/MultinomialLikelihood.h
    Mixture/Simple/Multinomial/MultinomialSampler.cpp
    Mixture/Simple/Multinomial/MultinomialDataStat.h
    Mixture/Simple/Multinomial/MultinomialDataStat.cpp
    Mixture/Simple/Poisson/Poisson.h
    Mixture/Simple/Poisson/PoissonStatistic.h
    Mixture/Simple/Poisson/PoissonLikelihood.h
    Mixture/Simple/Poisson/PoissonLikelihood.cpp
    Mixture/Simple/Poisson/PoissonStatistic.cpp
    Mixture/Simple/Poisson/Poisson.cpp
    Mixture/Simple/Poisson/PoissonSampler.h
    Mixture/Simple/Poisson/PoissonSampler.cpp
    Mixture/Simple/SimpleMixture.h
    Mixture/Rank/RankISRClass.h
    Mixture/Rank/RankLikelihood.cpp
    Mixture/Rank/RankISRMixture.h
    Mixture/Rank/RankISRStat.h
    Mixture/Rank/RankISRStat.cpp
    Mixture/Rank/RankIndividual.h
    Mixture/Rank/RankVal.h
    Mixture/Rank/RankISRClass.cpp
    Mixture/Rank/RankParser.cpp
    Mixture/Rank/RankParser.h
    Mixture/Rank/RankIndividual.cpp
    Mixture/Rank/RankLikelihood.h
    Mixture/Rank/RankVal.cpp
    Mixture/Functional/FuncCSClass.h
    Mixture/Functional/FuncSharedAlphaCSMixture.h
    Mixture/Functional/FuncCSClass.cpp
    Mixture/Functional/FunctionCS.cpp
    Mixture/Functional/FuncCSComputation.cpp
    Mixture/Functional/FuncCSComputation.h
    Mixture/Functional/FunctionCSParser.h
    Mixture/Functional/FunctionCSParser.cpp
    Mixture/Functional/FuncCSMixture.h
    Mixture/Functional/FunctionCS.h
    Statistic/ExponentialStatistic.h
    Statistic/MultinomialStatistic.cpp
    Statistic/RNG.h
    Statistic/RNG.cpp
    Statistic/MultinomialStatistic.h
    Statistic/GaussianStatistic.cpp
    Statistic/UniformStatistic.cpp
    Statistic/GaussianStatistic.h
    Statistic/ExponentialStatistic.cpp
    Statistic/UniformStatistic.h
    Statistic/Functions.h
    Statistic/Statistic.h
    Statistic/UniformIntStatistic.cpp
    Statistic/UniformIntStatistic.h
    Run/Predict.h
    Run/Learn.h
    Data/AugmentedData.h
    Data/ConfIntDataStat.h
    Data/AugmentedData.cpp
    Strategy/SEMStrategy.h
    Strategy/GibbsStrategy.h
)
