# add all the projects
ADD_SUBDIRECTORY(STKernel)
ADD_SUBDIRECTORY(Arrays)
ADD_SUBDIRECTORY(DManager)
#ADD_SUBDIRECTORY(Sdk)
ADD_SUBDIRECTORY(Algebra)
ADD_SUBDIRECTORY(Analysis)
ADD_SUBDIRECTORY(STatistiK)
ADD_SUBDIRECTORY(Reduct)
ADD_SUBDIRECTORY(Regress)
ADD_SUBDIRECTORY(StatModels)
ADD_SUBDIRECTORY(AAModels)

# create stkpp library
ADD_LIBRARY(${LIBRARY_NAME}
 $<TARGET_OBJECTS:STKSTKernel>
 $<TARGET_OBJECTS:STKArrays>
 $<TARGET_OBJECTS:STKSTatistiK>
 $<TARGET_OBJECTS:STKAlgebra>
 $<TARGET_OBJECTS:STKAnalysis>
 $<TARGET_OBJECTS:STKDManager>
 $<TARGET_OBJECTS:STKReduct>
 $<TARGET_OBJECTS:STKRegress>
 $<TARGET_OBJECTS:STKStatModels>
 $<TARGET_OBJECTS:STKAAModels>
)

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
INSTALL(TARGETS ${LIBRARY_NAME} ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})